--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
@@ -33,7 +33,7 @@ separator = "|"
 separator-foreground = ${colors.pn-light}
 modules-left = ewmh xwindow
 modules-center =
-modules-right = vpn network volume cpu date time
+modules-right = vpn network alsa cpu date time
 
 [module/xwindow]
 type = internal/xwindow
@@ -67,13 +67,17 @@ interval = 0.5
 label = " CPU: %percentage:2%% "
 label-foreground = ${colors.f-bright}
 
-[module/volume]
-type = internal/pulseaudio
+[module/alsa]
+type = internal/alsa
 master-soundcard = default
 speaker-soundcard = default
 headphone-soundcard = default
-label-volume = " VOL: %percentage:2%% "
-label-volume-foreground = ${colors.f-mint}
+master-mixer = Master
+speaker-mixer = Speaker
+headphone-mixer = Headphone
+headphone-id = 9
+mapped = true
+interval = 5
 
 [module/network]
 type = internal/network
