Added label-volume to module/alsa in polybar.config

--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
@@ -76,6 +76,7 @@ master-mixer = Master
 speaker-mixer = Speaker
 mapped = true
 interval = 5
+label-volume = %percentage%%
 
 [module/network]
 type = internal/network
