Added quotes to label-volume

--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
@@ -76,11 +76,11 @@ master-mixer = Master
 speaker-mixer = Speaker
 mapped = true
 interval = 5
-label-volume = %percentage%%
+label-volume = " VOL: %percentage%% "
 
 [module/network]
 type = internal/network
-interface = enp3s0
+interface = enp5s0
 unknown-as-up = true
 
 label-disconnected = " not connected "
