Added master mixer to polybar alsa module

--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
@@ -71,6 +71,7 @@ type = internal/alsa
 master-soundcard = default
 speaker-soundcard = default
 headphone-soundcard = default
+master-mixer = Master
 mapped = true
 interval = 5
 label-volume = " VOL: %percentage%% "
