--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
@@ -32,7 +32,7 @@ separator = "|"
 separator-foreground = ${colors.pn-light}
 modules-left = ewmh xwindow
 modules-center =
-modules-right = vpn network alsa cpu date time
+modules-right = vpn network pulseaudio cpu date time
 
 [module/xwindow]
 type = internal/xwindow
@@ -66,13 +66,9 @@ interval = 0.5
 label = " CPU: %percentage:2%% "
 label-foreground = ${colors.f-bright}
 
-[module/alsa]
-type = internal/alsa
-master-soundcard = default
-speaker-soundcard = default
-headphone-soundcard = default
-master-mixer = Master
-mapped = true
+[module/pulseaudio]
+type = internal/pulseaudio
+use-ui-max = false
 interval = 5
 label-volume = " VOL: %percentage%% "
 
