--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar.config
@@ -71,6 +71,7 @@ type = internal/pulseaudio
 use-ui-max = false
 interval = 5
 label-volume = " VOL: %percentage%% "
+format-foreground = ${colors.sn-light}
 
 [module/network]
 type = internal/network
