--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
@@ -32,11 +32,11 @@ separator = "|"
 separator-foreground = ${colors.pn-light}
 modules-left = ewmh xwindow
 modules-center =
-modules-right = network pulseaudio cpu date time
+modules-right = network pulseaudio cpu datetime
 
 [module/xwindow]
 type = internal/xwindow
-label = " %title:0:20:...%"
+label = " %title:0:50:...%"
 
 [module/ewmh]
 type = internal/xworkspaces
@@ -51,14 +51,9 @@ label-urgent-foreground = ${colors.win-urgent-fg}
 label-empty = " %name% "
 label-empty-foreground = ${colors.foreground}
 
-[module/date]
+[module/datetime]
 type = internal/date
-date = " %a, %b %d "
-format-foreground = ${colors.a-magenta}
-
-[module/time]
-type = internal/date
-date = " %I:%M %p "
+date = " %a, %b %d - %I:%M %p "
 
 [module/cpu]
 type = internal/cpu
@@ -70,7 +65,7 @@ label-foreground = ${colors.f-bright}
 type = internal/pulseaudio
 use-ui-max = false
 interval = 5
-label-volume = " VOL: %percentage%% "
+label-volume = VOL: %percentage%%
 format-foreground = ${colors.sn-light}
 
 [module/network]
