editing polybar colors

--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
@@ -54,6 +54,7 @@ label-empty-foreground = ${colors.foreground}
 [module/datetime]
 type = internal/date
 date = " %a, %b %d - %I:%M %p "
+format-foreground = ${colors.sn-light}
 
 [module/cpu]
 type = internal/cpu
@@ -65,7 +66,7 @@ label-foreground = ${colors.f-bright}
 type = internal/pulseaudio
 use-ui-max = false
 interval = 5
-label-volume = VOL: %percentage%%
+label-volume = " VOL: %percentage%% "
 format-foreground = ${colors.sn-light}
 
 [module/network]
