--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
@@ -59,8 +59,7 @@ format-foreground = ${colors.sn-light}
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-label = " CPU: %percentage:2%% "
-label-foreground = ${colors.f-bright}
+label = " %{colors.f-bright}CPU: %{colors.sn-light}%percentage:2%% "
 
 [module/pulseaudio]
 type = internal/pulseaudio
