--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
@@ -59,7 +59,7 @@ format-foreground = ${colors.sn-light}
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-label = " %{F${colors.f-bright}}CPU: %{F${colors.sn-light}}%percentage:2%% "
+label = " %{F#88c0d0}CPU: %{F#eceff4}%percentage:2%% "
 
 [module/pulseaudio]
 type = internal/pulseaudio
