--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
@@ -54,7 +54,7 @@ label-empty-foreground = ${colors.foreground}
 [module/datetime]
 type = internal/date
 date = " %a, %b %d - %I:%M %p "
-format-foreground = ${colors.sn-light}
+format-foreground = ${colors.f-washed}
 
 [module/cpu]
 type = internal/cpu
@@ -65,7 +65,7 @@ label = " %{F#88c0d0}CPU: %{F#eceff4}%percentage:2%% "
 type = internal/pulseaudio
 use-ui-max = false
 interval = 5
-label-volume = " VOL: %percentage%% "
+label-volume = " %{F#88c0d0}VOL: %{F#eceff4}%percentage%% "
 format-foreground = ${colors.sn-light}
 
 [module/network]
