--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
@@ -54,7 +54,7 @@ label-empty-foreground = ${colors.foreground}
 [module/datetime]
 type = internal/date
 date = " %a, %b %d - %I:%M %p "
-format-foreground = ${colors.f-washed}
+format-foreground = ${colors.f-dark}
 
 [module/cpu]
 type = internal/cpu
