adjusting polybar window name width

--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar-epona.config
@@ -36,7 +36,7 @@ modules-right = network pulseaudio cpu datetime
 
 [module/xwindow]
 type = internal/xwindow
-label = " %title:0:50:...%"
+label = " %title:0:25:...%"
 
 [module/ewmh]
 type = internal/xworkspaces
@@ -53,7 +53,7 @@ label-empty-foreground = ${colors.foreground}
 
 [module/datetime]
 type = internal/date
-date = " %a, %b %d - %I:%M %p "
+date = " %D - %I:%M %p "
 format-foreground = ${colors.f-dark}
 
 [module/cpu]
