--- a/modules/home-manager/programs/leftwm/picom.conf
+++ b/modules/home-manager/programs/leftwm/picom.conf
@@ -1,3 +1,3 @@
-unredir-if-possible = false;
-backend = "xrender"; # try "glx" if xrender doesn't help
-vsync = true;
+#unredir-if-possible = false;
+#backend = "xrender"; # try "glx" if xrender doesn't help
+#vsync = true;
