--- a/modules/home-manager/programs/leftwm/themes/ascent/polybar-agro.config
+++ b/modules/home-manager/programs/leftwm/themes/ascent/polybar-agro.config
@@ -65,8 +65,35 @@ label-foreground = ${colors.f-bright}
 type = internal/pulseaudio
 use-ui-max = false
 interval = 5
-label-volume = " VOL: %percentage%% " 
+label-volume = " VOL: %percentage%% "
 format-foreground = ${colors.sn-light}
+
+[module/alsa]
+type = internal/alsa
+
+master-soundcard = default
+speaker-soundcard = default
+headphone-soundcard = default
+
+master-mixer = Master
+
+; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
+; Default: false
+mapped = false
+
+; Interval for volume increase/decrease (in percent points)
+; Default: 5
+interval = 5
+
+; Available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-volume = <label-volume>
+
+; Available tokens:
+;   %percentage% (default)
+label-volume = " VOL: %percentage%% "
 
 [module/network]
 type = internal/network
